# dino

./: .gitignore  CMakeLists.txt  README.md  build-flatpack.sh  build-win64.sh  configure  im.dino.Dino+.json  im.dino.Dino.json  im.dino.DinoPlus.json  meson.build  meson_options.txt
.github/workflows/: build-win64.yml  build.yml
cmake/: ComputeVersion.cmake
libdino/src/: application.vala
libdino/src/entity/: encryption.vala  settings.vala
libdino/src/service/: file_manager.vala  muc_manager.vala
main/: CMakeLists.txt
main/data/: conversation_item_widget.ui  conversation_row.ui  occupant_list_item.ui  quote.ui  settings_dialog.ui
main/po/: en.po  ru.po
main/src/ui/: settings_dialog.vala
main/src/ui/add_conversation/: list_row.vala
main/src/ui/conversation_content_view/: conversation_item_skeleton.vala  file_image_widget.vala  file_widget.vala  message_widget.vala  quote_widget.vala
main/src/ui/conversation_selector/: conversation_selector_row.vala
main/src/ui/manage_accounts/: dialog.vala
main/src/ui/occupant_menu/: list_row.vala
plugins/mac-notification/: CMakeLists.txt
plugins/mac-notification/src/: mac_notification_provider.vala  plugin.vala  register_plugin.vala
plugins/openpgp/po/: ru.po
plugins/rtp/src/: device.vala
plugins/windows-notification/src/: win_notification_provider.vala
